# faucet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
cascade/: app.py  classify.py  importer.py  library.py  libtidy.py  notify.py  profiles.py  scheduler.py  search.py  series.py  sort.py  tmdb.py
cascade/clients/: transmission.py
cascade/static/: index.html
docs/: HOOKS.md  SETUP.md  faucet-hook-wrapper.sh
faucet/: app.py  auth.py  auth_routes.py  config.py  db.py  filebrowser.py  fixmatch.py  hook.py  importer.py  langdetect.py  library.py  movies.py  notify.py  packs.py  profiles.py  requests_flow.py  scheduler.py  search.py  series.py  sort.py  sweep.py  tmdb.py
faucet/clients/: __init__.py  base.py  deluge.py  qbittorrent.py  transmission.py
faucet/static/: index.html  login.html
tests/: test_cascade.py  test_faucet.py
