[project]
name = "faucet-media"
version = "1.0.0"
description = "Self-hosted search, download, sort, and manage for your media library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harrison Korodi" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "requests>=2.31",
  "guessit>=3.8",
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Harrsn/faucet"
Issues = "https://github.com/Harrsn/faucet/issues"

[project.scripts]
faucet-sort = "faucet.sort:main"
faucet-tidy = "faucet.libtidy:main"

[tool.setuptools.packages.find]
include = ["faucet*"]
